Added cart app, views, urls and context processor

--- a/accounts/templates/index.html
+++ b/accounts/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block page_title %}
-    Authentication With Django! | Home
+    Django E-commerce | Home
 {% endblock %}
 
 {% block page_heading %}
