--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -3,7 +3,7 @@
 {% load bootstrap_tags %}
 
 {% block page_title %}
-    Authentication With Django! | Login
+    Django E-commerce | Login
 {% endblock %}
 
 {% block page_heading %}
