--- a/accounts/templates/profile.html
+++ b/accounts/templates/profile.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block page_title %}
-    Authentication With Django! | {{ user }}'s Profile
+    Django E-commerce | {{ user }}'s Profile
 {% endblock %}
 
 {% block page_heading %}
