--- a/accounts/templates/registration.html
+++ b/accounts/templates/registration.html
@@ -3,7 +3,7 @@
 {% load bootstrap_tags %}
 
 {% block page_title %}
-    Authentication With Django! | Registration
+    Django E-commerce | Registration
 {% endblock %}
 
 {% block page_heading %}
