--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -15,13 +15,13 @@
                     <p class="product-description">{{ item.product.description }}</p>
                     <p>{{ item.product.price }}</p>
                     <p>
-                        <form class="form-inline" method="POST" action="{% urls 'adjust_cart' item.id %}">
+                        <form class="form-inline" method="POST" action="{% url 'adjust_cart' item.id %}">
                             {% csrf_token %}
                             <div class="form-group">
                                 <label for="exampleInputAmount" class="sr-only">New Qty</label>
                                 <div class="input-group">
                                     <div class="input-group-addon">Qty</div>
-                                    <input class="form-control" type="number" min="0" max="999">
+                                    <input class="form-control" type="number" min="0" max="999" name="quantity">
                                     <div class="input-group-addon">{{ item.quantity }}</div>
                                 </div>
                             </div>
