--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -15,13 +15,13 @@
                     <p class="product-description">{{ item.product.description }}</p>
                     <p>{{ item.product.price }}</p>
                     <p>
-                        <form class="form-inline" method="POST" action="{% url 'adjust_cart' item.id %}">
+                        <form class="form-inline" method="POST" action="{% url 'adjust_cart' item.item_id %}">
                             {% csrf_token %}
                             <div class="form-group">
                                 <label for="exampleInputAmount" class="sr-only">New Qty</label>
                                 <div class="input-group">
                                     <div class="input-group-addon">Qty</div>
-                                    <input class="form-control" type="number" min="0" max="999" name="quantity">
+                                    <input class="form-control" type="number" min="0" max="999" name="quantity" required>
                                     <div class="input-group-addon">{{ item.quantity }}</div>
                                 </div>
                             </div>
@@ -35,7 +35,7 @@
     </div>
     <div class="row">
         <p>Total</p>
-        <p><span class="glyphicon glyphicon-dollar" aria-hidden="true"></span>{{ total }}</p>
+        <p><span class="glyphicon glyphicon-usd" aria-hidden="true"></span>{{ total }}</p>
         <a href="/" class="btn btn-success" role="button"><span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span>Checkout</a>
     </div>
 {% endblock %}
