--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="row row-flex">
         {% for product in products %}
-        <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4 display panel panel-default">
+        <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4 display panel-default">
             <div class="panel-body">
                 <div class="product" style="background-image: url('{{ MEDIA_URL }}{{ product.image }}')">
                     
@@ -15,7 +15,7 @@
                 <form method="POST" action="{% url 'add_to_cart' product.id %}">
                     {% csrf_token %}
                     <div class="input-group">
-                        <input name="quantity" type="number" min="1" max="999" class="form-control" placeholder="Quantity">
+                        <input name="quantity" type="number" min="1" max="999" class="form-control" placeholder="Quantity" required>
                         <span class="input-group-btn">
                             <button class="btn btn-success" type="submit">Add</button>
                         </span>
