--- a/templates/base.html
+++ b/templates/base.html
@@ -58,13 +58,17 @@
         </div>
     {% endif %}
     <div class="container">
-        <div class="display">
-            <form class="form-inline" action="{% url 'search' %}" method="get">
-                <div class="form-group">
-                    <input class="form-control" type="text" name="q">
-                    <button type="submit" class="btn btn-success">Search</button>
+        <div class="row">
+            <div class="col-xs-12 col-sm-6 col-sm-offset-3">
+                <div class="display">
+                    <form action="{% url 'search' %}" method="get">
+                        <div class="form-group">
+                            <input class="form-control" type="text" name="q" placeholder="Search products...">
+                        </div>
+                        <button type="submit" class="btn btn-success btn-block">Search</button>
+                    </form>
                 </div>
-            </form>
+            </div>
         </div>
         {% block content %} {% endblock %}
     </div>
