--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -5,7 +5,7 @@
 {% block content %}
     <div class="row row-flex">
         {% for item in cart_items %}
-        <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4 display panel panel-default">
+        <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-4 display panel-default">
             <div class="panel-body">
                 <div class="product" style="background-image: url('{{ MEDIA_URL }}{{ item.product.image }}')">
                     
@@ -13,19 +13,18 @@
                 <div class="caption">
                     <h3>{{ item.product.name }}</h3>
                     <p class="product-description">{{ item.product.description }}</p>
-                    <p>{{ item.product.price }}</p>
+                    <p class="lead">${{ item.product.price }}</p>
                     <p>
-                        <form class="form-inline" method="POST" action="{% url 'adjust_cart' item.item_id %}">
+                        <form method="POST" action="{% url 'adjust_cart' item.item_id %}">
                             {% csrf_token %}
                             <div class="form-group">
-                                <label for="exampleInputAmount" class="sr-only">New Qty</label>
                                 <div class="input-group">
                                     <div class="input-group-addon">Qty</div>
-                                    <input class="form-control" type="number" min="0" max="999" name="quantity" required>
+                                    <input class="form-control" type="number" min="0" max="999" name="quantity" placeholder="New Qty" required>
                                     <div class="input-group-addon">{{ item.quantity }}</div>
                                 </div>
                             </div>
-                            <button class="btn btn-primary" type="submit"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>Amend</button>
+                            <button class="btn btn-primary btn-block" type="submit"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>Update Quantity</button>
                         </form>
                     </p>
                 </div>
@@ -34,8 +33,9 @@
         {% endfor %}
     </div>
     <div class="row">
-        <p>Total</p>
-        <p><span class="glyphicon glyphicon-usd" aria-hidden="true"></span>{{ total }}</p>
-        <a href="/" class="btn btn-success" role="button"><span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span>Checkout</a>
+        <div class="col-xs-10 col-xs-offset-1 col-sm-12 col-sm-offset-0">
+            <p class="lead">Total: ${{ total }}</p>
+            <a href="/" class="btn btn-success" role="button"><span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span>Checkout</a>
+        </div>
     </div>
 {% endblock %}
