--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -3,14 +3,14 @@
 {% block content %}
     <div class="row row-flex">
         {% for product in products %}
-        <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4 display panel-default">
+        <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-4 display panel-default">
             <div class="panel-body">
                 <div class="product" style="background-image: url('{{ MEDIA_URL }}{{ product.image }}')">
                     
                 </div>
                 <h3>{{ product.name }}</h3>
                 <p class="product-description">{{ product.description }}</p>
-                <p>{{ product.price }}</p>
+                <p class="lead">${{ product.price }}</p>
                 
                 <form method="POST" action="{% url 'add_to_cart' product.id %}">
                     {% csrf_token %}
