Installed stripe and created checkout app

--- a/templates/base.html
+++ b/templates/base.html
@@ -74,7 +74,12 @@
     </div>
     <footer>
         <div class="container">
-            <p class="lead">Built with pride by ckz8780. Check out my <a href="https://www.github.com/ckz8780" target="_blank" title="Click to visit my GitHub!"><strong>GitHub</strong></a>!</p>
+            <div class="row text-center">
+                <div class="col-xs-12">
+                    <hr>
+                    <p class="lead">Built with pride by ckz8780. Check out my <a href="https://www.github.com/ckz8780" target="_blank" title="Click to visit my GitHub!"><strong>GitHub</strong></a>!</p>
+                </div>
+            </div>
         </div>
     </footer>
 </body>
