--- a/templates/base.html
+++ b/templates/base.html
@@ -48,16 +48,27 @@
             </div>
         </div>
     </nav>
-    {% if messages %}
-        <div class="alert alert-success">
-            <div class="messages">
+    
+    <div class="container">
+        {% if messages %}
+        <div class="row">
+            <div class="col-xs-12 col-sm-6 col-sm-offset-3">
                 {% for message in messages %}
-                    {{ message }}
+                    {% if message.tags == 'error' %}
+                        <div class="alert alert-danger">
+                    {% elif message.tags == 'success' %}
+                        <div class="alert alert-success">
+                    {% else %}
+                        <div class="alert alert-warning">
+                    {% endif %}
+                        <div class="messages">
+                            {{ message }}
+                        </div>
+                    </div>
                 {% endfor %}
             </div>
         </div>
-    {% endif %}
-    <div class="container">
+        {% endif %}
         <div class="row">
             <div class="col-xs-12 col-sm-6 col-sm-offset-3">
                 <div class="display">
