completed styling and finishing touches

--- a/accounts/templates/index.html
+++ b/accounts/templates/index.html
@@ -1,9 +1,12 @@
 {% extends 'base.html' %}
 
-{% block page_title %}
+{% block title %}
     Django E-commerce | Home
 {% endblock %}
 
-{% block page_heading %}
-    Home Page
+{% block search %}
+{% endblock %}
+
+{% block header %}
+    Accounts
 {% endblock %}
