--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -1,13 +1,20 @@
 {% extends 'base.html' %}
 
-{% block page_title %}
-    Authentication With Django! | Password Reset Email Sent
+{% block title %}
+	Magic Eight Ball - Password Reset Email Sent
 {% endblock %}
 
-{% block page_heading %}
-    Password Reset Email Sent
+{% block header %}
+    Email Sent
+{% endblock %}
+
+{% block search %}
 {% endblock %}
 
 {% block content %}
-    <p>Thanks! An email has been sent.</p>
+<div class="row text-center">
+    <div class="col-xs-12 col-md-6 col-md-offset-3">
+        <h4>An email has been sent! Once you've reset your password, you'll be able to <a href="{% url 'login' %}">log in</a> again.</h4>
+    </div>
+</div>
 {% endblock %}
