--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -2,20 +2,28 @@
 
 {% load bootstrap_tags %}
 
-{% block page_title %}
+{% block title %}
     Django E-commerce | Login
 {% endblock %}
 
-{% block page_heading %}
+{% block header %}
     User Login
 {% endblock %}
 
+{% block search %}
+{% endblock %}
+
 {% block content %}
+<div class="row">
+    <div class="col-xs-12 col-md-6 col-md-offset-3">
     <form method="POST">
         {% csrf_token %}
         {{ login_form | as_bootstrap }}
-        <button class="btn btn-default" type="submit">Login</button>
+        <button class="btn btn-success btn-block btn-lg" type="submit">Login</button>
     </form>
     
-    <p><a href="{% url 'password_reset' %}">Forgot your password?</a></p>
+    <h4 class="text-center">If you've forgotten your password, you can <a href="{% url 'password_reset' %}">reset it</a>.</h4>
+    <h4 class="text-center">Don't have an account? <a href="{% url 'registration' %}">Create one!</a></h4>
+    </div>
+</div>
 {% endblock %}
