--- a/accounts/templates/registration.html
+++ b/accounts/templates/registration.html
@@ -2,20 +2,26 @@
 
 {% load bootstrap_tags %}
 
-{% block page_title %}
-    Django E-commerce | Registration
+{% block title %}
+    Django E-Commerce | Registration
 {% endblock %}
 
-{% block page_heading %}
+{% block header %}
     User Registration
 {% endblock %}
 
+{% block search %}
+{% endblock %}
+
 {% block content %}
-    <p>If you already have an account, you can <a href="{% url 'login' %}" class="">sign in</a>.</p>
-    
-    <form method="POST">
-        {% csrf_token %}
-        {{ registration_form | as_bootstrap }}
-        <button class="btn btn-default" type="submit">Register</button>
-    </form>
+<div class="row">
+    <div class="col-xs-12 col-md-6 col-md-offset-3">
+        <form method="POST">
+            {% csrf_token %}
+            {{ registration_form | as_bootstrap }}
+            <button class="btn btn-success btn-block btn-lg mt-5" type="submit">Register</button>
+        </form>
+        <h4 class="text-center mt-5">If you already have an account, you can <a href="{% url 'login' %}">log in</a>.</h4>
+    </div>
+</div>
 {% endblock %}
