--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -2,6 +2,10 @@
 {% load staticfiles %}
 {% load bootstrap_tags %}
 
+{% block header %}
+    Shopping Cart
+{% endblock %}
+
 {% block content %}
     <div class="row row-flex">
         {% for item in cart_items %}
@@ -35,7 +39,7 @@
     <div class="row">
         <div class="col-xs-10 col-xs-offset-1 col-sm-12 col-sm-offset-0">
             <p class="lead">Total: ${{ total }}</p>
-            <a href="{% url 'checkout' %}" class="btn btn-success" role="button"><span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span>Checkout</a>
+            <a href="{% url 'checkout' %}" class="btn btn-info" role="button"><span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span> Checkout</a>
         </div>
     </div>
 {% endblock %}
