--- a/checkout/templates/checkout.html
+++ b/checkout/templates/checkout.html
@@ -2,6 +2,10 @@
 {% load static from staticfiles %}
 {% load bootstrap_tags %}
 
+{% block header %}
+    Checkout
+{% endblock %}
+
 {% block content %}
 <div class="row row-flex">
     {% for item in cart_items %}
@@ -41,7 +45,7 @@
             
             {% csrf_token %}
             <div class="form-group col-xs-12">
-                <input class="btn btn-primary" id="submit_payment_btn" name="commit" type="submit" value="Submit Payment">
+                <input class="btn btn-info" id="submit_payment_btn" name="commit" type="submit" value="Submit Payment">
             </div>
         </form>
     </div>
