--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
+{% block header %}
+    Products
+{% endblock %}
+
 {% block content %}
     <div class="row row-flex">
         {% for product in products %}
