--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Django E-Commerce</title>
+    <title>{% block title %}Django E-Commerce{% endblock %}</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.7/cerulean/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous" />
     <link rel="stylesheet" href="{% static 'css/custom.css' %}">
@@ -49,6 +49,18 @@
         </div>
     </nav>
     
+    <header class="container">
+        <div class="row text-center">
+            <div class="col-xs-12">
+                <h1>
+                    {% block header %}
+                    {% endblock %}
+                    <hr>
+                </h1>
+            </div>
+        </div>
+    </header>
+    
     <div class="container">
         {% if messages %}
         <div class="row">
@@ -69,6 +81,7 @@
             </div>
         </div>
         {% endif %}
+        {% block search %}
         <div class="row">
             <div class="col-xs-12 col-sm-6 col-sm-offset-3">
                 <div class="display">
@@ -81,6 +94,7 @@
                 </div>
             </div>
         </div>
+        {% endblock %}
         {% block content %} {% endblock %}
     </div>
     <footer>
