--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -1,13 +1,20 @@
 {% extends 'base.html' %}
 
-{% block page_title %}
-    Authentication With Django! | Password Reset Complete
+{% block title %}
+    Django E-Commerce | Password Reset Complete
 {% endblock %}
 
-{% block page_heading %}
+{% block header %}
     Password Reset Complete
 {% endblock %}
 
+{% block search %}
+{% endblock %}
+
 {% block content %}
-    <p>Password Reset Complete</p>
+<div class="row text-center">
+    <div class="col-xs-12 col-md-6 col-md-offset-3">
+        <h4>Thanks! Your password has been reset! You can now <a href="{% url 'login' %}">log in!</a></h4>
+    </div>
+</div>
 {% endblock %}
