--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,19 +1,26 @@
 {% extends 'base.html' %}
 
-{% block page_title %}
-    Authentication With Django! | Password Reset Confirm
+{% load bootstrap_tags %}
+
+{% block title %}
+	Django E-Commerce - Reset Your Password
 {% endblock %}
 
-{% block page_heading %}
-    Password Reset Confirm
+{% block header %}
+    New Password
 {% endblock %}
 
-{% block content %}
-    <p>Please Enter your new password:</o>
-    
-    <form method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Reset Password</button>
-    </form>
+{% block search %}
+{% endblock %}
+
+{% block content %}    
+<div class="row">
+    <div class="col-xs-12 col-md-6 col-md-offset-3">
+        <form method="POST">
+            {% csrf_token %}
+            {{ form | as_bootstrap }}
+            <button class="btn btn-success btn-block btn-lg" type="submit">Reset Password</button>
+        </form>
+    </div>
+</div>
 {% endblock %}
