--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,22 +1,27 @@
 {% extends 'base.html' %}
 
-{% block page_title %}
-    Authentication With Django! | Reset Password
+{% load bootstrap_tags %}
+
+{% block title %}
+    Django E-Commerce - Reset Password
 {% endblock %}
 
-{% block page_heading %}
+{% block header %}
     Reset Password
 {% endblock %}
 
+{% block search %}
+{% endblock %}
+
 {% block content %}
-    <p>Please enter your email address:</p>
-    <form method="POST">
-        {% csrf_token %}
-        {{ form.email.errors }}
-        <p>
-            <label for="id_email">Email Address: </label>
-            {{ form.email }}
-        </p>
-        <button type="submit">Reset Password</button>
-    </form>
+<div class="row">
+    <div class="col-xs-12 col-md-6 col-md-offset-3">
+        <form method="POST">
+            {% csrf_token %}
+            {{ form | as_bootstrap }}
+            <button class="btn btn-success btn-block btn-lg" type="submit">Reset Password</button>
+        </form>
+        <h4 class="text-center">Remembered your password? You can go back and <a href="{% url 'login' %}" class="">log in!</a></h4>
+    </div>
+</div>
 {% endblock %}
